force-app/main/default/objects/Media__c/Media__c.object-meta.xml
<CustomObject>
    <description>It contains the media of the bills</description>
    <label>Media</label>
    <nameField>
        <label>Media Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>