force-app/main/default/objects/Media__c/fields/media_id__c.field-meta.xml
<CustomField>
    <fullName>media_id__c</fullName>
    <displayFormat>media-{0000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>unique id for the each media</inlineHelpText>
    <label>media id</label>
    <type>AutoNumber</type>
</CustomField>