force-app/main/default/objects/Media__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <inlineHelpText>shows the total quantity of the media</inlineHelpText>
    <label>Total Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>